# NS3_Building_Wifi

./: CMakeLists.txt  MyNode.cc  he.cc  he2.cc  my.cc  utils.cc  wifi.cc  wireless.cc
My_util/: MyCreateUtils.h  MyNode.h
hello/: CMakeLists.txt
ns-3.26/: .lock-waf_linux2_build  grid.xml  wifi-tcp-cj.xml  wifi-tcp-cj3.xml  wifi-tcp-nt1.xml
ns-3.26/scratch/: he.cc
ns-3.26/visualize/: wifi-tcp-nt1.xml  wifi-tcp-nt2.xml
